# mini_vi_slam

./: .gitignore  CMakeLists.txt  README.md  backend.cc  frontend.cc
apps/: CMakeLists.txt  backend.cc  backend_direct.cc  frontend.cc  ground_truth_process.cc
config/: test.yaml
eval/: evaluate.py  plot_config.yaml
lib/: CMakeLists.txt  IMUError.h  ImuError.h  LandmarkParameterBlock.h  ParameterBlock.h  ReprojectionError.h  SizedParameterBlock.h  Timed3dParameterBlock.h  TimedQuatParameterBlock.h  imu_error.h  landmark_parameter_block.h  parameter_block.h  pre_int_imu_error.h  quat_parameter_block.h  reprojection_error.h  sized_parameter_block.h  so3.h  timed_3d_parameter_block.h  timed_quat_parameter_block.h  vec_3d_parameter_block.h
test/: CMakeLists.txt  README.md  backend_test.cc  backend_triangularization.cc  imu_error_test.cc  pre_int_imu_error_test.cc  reprojection_error_test.cc  transformation.h
